--- a/app3/src/pages/index.astro
+++ b/app3/src/pages/index.astro
@@ -18,7 +18,7 @@ import MenuApp from '../components/MenuApp.jsx';
 		<!-- Open Graph Meta Tags -->
 		<meta property="og:title" content="La Ruta 11 - Menú Digital">
 		<meta property="og:description" content="Menú digital de La Ruta 11. Completos, hamburguesas, churrascos y más.">
-		<meta property="og:image" content="https://laruta11-images.s3.amazonaws.com/menu/logo-optimized.jpg">
+		<meta property="og:image" content="https://laruta11-images.s3.amazonaws.com/menu/logo-optimized.png">
 		<meta property="og:url" content="https://app.laruta11.cl">
 		<meta property="og:type" content="website">
 		<meta property="og:site_name" content="La Ruta 11">
@@ -27,7 +27,7 @@ import MenuApp from '../components/MenuApp.jsx';
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="La Ruta 11 - Menú Digital">
 		<meta name="twitter:description" content="Menú digital de La Ruta 11. Completos, hamburguesas, churrascos y más.">
-		<meta name="twitter:image" content="https://laruta11-images.s3.amazonaws.com/menu/logo-optimized.jpg">
+		<meta name="twitter:image" content="https://laruta11-images.s3.amazonaws.com/menu/logo-optimized.png">
 		
 		<!-- iOS PWA Support -->
 		<meta name="apple-mobile-web-app-capable" content="yes">
