--- a/app3/src/pages/descuento-hunter.astro
+++ b/app3/src/pages/descuento-hunter.astro
@@ -505,7 +505,7 @@
                 <div class="mobile-company" data-company="ruta11" data-name="la ruta 11">
                     <div class="mobile-company-info">
                         <div class="mobile-company-name">
-                            <img src="https://laruta11-images.s3.amazonaws.com/menu/logo-optimized.jpg" style="width: 16px; height: 16px; display: inline; margin-right: 4px; vertical-align: middle;"> LA RUTA 11
+                            <img src="https://laruta11-images.s3.amazonaws.com/menu/logo-optimized.png" style="width: 16px; height: 16px; display: inline; margin-right: 4px; vertical-align: middle;"> LA RUTA 11
                         </div>
                         <div class="mobile-company-desc">
                             Hasta 70% en bebidas (1 vez/mes)<br>
@@ -576,7 +576,7 @@
                 <div class="mobile-company" data-company="ruta11" data-name="la ruta 11">
                     <div class="mobile-company-info">
                         <div class="mobile-company-name">
-                            <img src="https://laruta11-images.s3.amazonaws.com/menu/logo-optimized.jpg" style="width: 16px; height: 16px; display: inline; margin-right: 4px; vertical-align: middle;"> LA RUTA 11
+                            <img src="https://laruta11-images.s3.amazonaws.com/menu/logo-optimized.png" style="width: 16px; height: 16px; display: inline; margin-right: 4px; vertical-align: middle;"> LA RUTA 11
                         </div>
                         <div class="mobile-company-desc">
                             Hasta 70% en bebidas (1 vez/mes)<br>
