--- a/caja3/src/pages/checkout.astro
+++ b/caja3/src/pages/checkout.astro
@@ -7,7 +7,7 @@ import ErrorBoundary from '../components/ErrorBoundary.jsx';
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/x-icon" href="/icon.ico" />
-		<link rel="icon" type="image/png" href="https://laruta11-images.s3.amazonaws.com/menu/logo-optimized.jpg" />
+		<link rel="icon" type="image/png" href="https://laruta11-images.s3.amazonaws.com/menu/logo-optimized.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Checkout - La Ruta 11</title>
@@ -21,7 +21,7 @@ import ErrorBoundary from '../components/ErrorBoundary.jsx';
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="default">
 		<meta name="apple-mobile-web-app-title" content="La Ruta 11">
-		<link rel="apple-touch-icon" href="https://laruta11-images.s3.amazonaws.com/menu/logo-optimized.jpg">
+		<link rel="apple-touch-icon" href="https://laruta11-images.s3.amazonaws.com/menu/logo-optimized.png">
 		
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
